# irv-autopkg

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: build_client.yaml  build_dev.yaml  build_prod_and_release.yaml
.github/workflows/test/: .citest.env  docker-compose-ci-test.yaml  run_tests.sh
api/: __init__.py  exceptions.py  helpers.py  main.py  openapi.py  routes.py  schemas.py
api/alembic/: env.py
api/alembic/versions/: 49b733ecc873_added_boundary_table.py  7607db356dd5_boundaries_to_unqiue_names.py
api/db/: __init__.py  controller.py  queries.py
api/db/models/: __init__.py  boundary.py
api/routers/: boundaries.py  jobs.py  packages.py  probes.py  processors.py
ccgautopkg/: Dockerfile  README.md  config.py  main.py  requirements.txt
ccgautopkg/api/: config.py  exceptions.py  helpers.py  main.py  routes.py  schemas.py
ccgautopkg/api/alembic/: env.py
ccgautopkg/api/db/: __init__.py  controller.py  (+1 more)
ccgautopkg/dataproc/: README.md  __init__.py  config.py  exceptions.py  helpers.py  requirements.txt  tasks.py
ccgautopkg/legacy/: Dockerfile  raster_processor_two.py
ccgautopkg/tests/: helpers.py
client_gen/typescript/: package-lock.json  package.json  tsconfig.json
dataproc/: README.md  __init__.py  exceptions.py  helpers.py  tasks.py
dataproc/backends/: __init__.py  base.py
dataproc/storage/: __init__.py  awss3.py  base.py  localfs.py
nginx/: nginx.conf
redis/: Dockerfile
tests/: __init__.py  helpers.py
tests/data/: load_boundaries.py
(+154 files in other folders)
