[project]
name = "dataproc"
version = "0.2.7"
authors = [
    { name = "Chris Nicholas", email = "kris_nich@hotmail.co.uk" },
    { name = "Tom Russell", email = "tom.russell@ouce.ox.ac.uk" },
]
description = "Helper package for irv-autopkg"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "celery",
    "fiona",
    "geopandas",
    "numpy",
    "GDAL",
    "pandas",
    "psycopg2-binary",
    "pyarrow",
    "pyproj",
    "rasterio",
    "requests",
    "shapely",
    "sqlalchemy",
]

[project.urls]
"Homepage" = "https://github.com/nismod/irv-autopkg"
"Bug Tracker" = "https://github.com/nismod/irv-autopkg/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
